kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: technotim-home
  namespace: default
spec:
  selector:
    matchLabels:
      app: technotim-home
  replicas: 3
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 1
  template:
    metadata:
      labels:
        app: technotim-home
      annotations:
        deploy-date: "deploy-date-value"
    spec:
      containers:
        - name: technotim-home
          image: "registry-value:latest"
          imagePullPolicy: Always
          resources:
            requests:
              memory: 100Mi
              cpu: 100m
          ports:
            - containerPort: 80
              name: http
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            successThreshold: 2
            failureThreshold: 2
            periodSeconds: 10
            timeoutSeconds: 5
            httpGet:
              path: /
              port: http
      imagePullSecrets:
        - name: registry-credentials-gitlab
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: network
                    operator: In
                    values:
                      - servers-untrusted
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: technotim-home
