kubernetes/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: technotim-docs
spec:
  selector:
    app: technotim-docs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
