kubernetes/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: technotim-docs-ingress
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`docs.technotim.live`)
      kind: Rule
      services:
        - name: technotim-docs
          port: 80
